2012-05-15 13:28  paddockd

	* [r327] ChangeLog, makefile.linux24-i586-display,
	  src/squeezeslave/squeezeslave.c: Removed curly brackets from
	  makefile.linux24-i586-display.
	  Increased revision to 327.

2012-05-15 12:12  paddockd

	* [r326] ChangeLog, makefile.linux24-i586-display,
	  scripts/buildall-lnx24mmx, src/squeezeslave/squeezeslave.c:
	  Updated i586 makefile to use tremor fixed point ogg decoder by
	  default.
	  Updated i586 build script.
	  Increased revision to 326.

2012-04-14 12:39  paddockd

	* [r325] ChangeLog, makefile.osx-i64-display,
	  makefile.osx-intel-display, makefile.osx-ppc-display,
	  src/squeezeslave/squeezeslave.c: Upgraded libportaudio to r1826
	  for OSX.
	  Increased revision to 325.

2012-04-14 12:17  paddockd

	* [r324] ChangeLog, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c: Grouped -n/-t/-y together in
	  help.
	  Increased revision to 324.

2012-04-12 17:39  paddockd

	* [r323] ChangeLog, src/slimaudio/slimaudio.c,
	  src/slimaudio/slimaudio.h, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c,
	  src/squeezeslave/squeezeslave.h: Added -t/--audiotype option to
	  limit -n/--name matching to a specific portaudio hostapi type.
	  Increased revision to 323.

2012-04-12 16:05  paddockd

	* [r322] makefile.windows-display, sources,
	  sources/portaudio-r1826.tar.gz, src/squeezeslave/squeezeslave.c:
	  Updated to Windows June 2010 DirectX SDK.
	  Enabled ZONES feature for mingw32 builds.
	  Updated portaudio library to r1826 for mingw32 builds.
	  Increased revision to 322.

2012-04-08 14:21  paddockd

	* [r321] ChangeLog, makefile.osx-i64-display,
	  makefile.osx-intel-display, makefile.osx-ppc-display,
	  src/squeezeslave/squeezeslave.c: Enable ZONES for OSX.
	  Remove -Werror from portaudio configure prior to execution.
	  Increased revision to 321.

2012-04-02 13:39  paddockd

	* [r320] ChangeLog, TODO, src/slimproto/slimproto.c,